src/cmd/qa/y.output
Terminals unused in grammar

   LXORW
   LRETT
   LFLUSH
   LMOVEM
   LMOVFL


Grammar

    0 $accept: prog $end

    1 prog: /* empty */
    2     | prog line

    3 $@1: /* empty */

    4 line: LLAB ':' $@1 line

    5 $@2: /* empty */

    6 line: LNAME ':' $@2 line
    7     | LNAME '=' expr ';'
    8     | LVAR '=' expr ';'
    9     | LSCHED ';'
   10     | ';'
   11     | inst ';'
   12     | error ';'

   13 inst: LMOVW rreg ',' rreg
   14     | LMOVW addr ',' rreg
   15     | LMOVW regaddr ',' rreg
   16     | LMOVB rreg ',' rreg
   17     | LMOVB addr ',' rreg
   18     | LMOVB regaddr ',' rreg
   19     | LFMOV addr ',' freg
   20     | LFMOV regaddr ',' freg
   21     | LFMOV fimm ',' freg
   22     | LFMOV freg ',' freg
   23     | LFMOV freg ',' addr
   24     | LFMOV freg ',' regaddr
   25     | LMOVW rreg ',' addr
   26     | LMOVW rreg ',' regaddr
   27     | LMOVB rreg ',' addr
   28     | LMOVB rreg ',' regaddr
   29     | LMOVW freg ',' addr
   30     | LMOVW freg ',' regaddr
   31     | LMOVW fpscr ',' freg
   32     | LMOVW freg ',' fpscr
   33     | LMOVW freg ',' imm ',' fpscr
   34     | LMOVW fpscr ',' creg
   35     | LMOVW imm ',' fpscrf
   36     | LMTFSB imm ',' con
   37     | LMOVW rreg ',' imm ',' lcr
   38     | LMOVW rreg ',' creg
   39     | LMOVW rreg ',' lcr
   40     | LADDW rreg ',' sreg ',' rreg
   41     | LADDW imm ',' sreg ',' rreg
   42     | LADDW rreg ',' imm ',' rreg
   43     | LADDW rreg ',' rreg
   44     | LADDW imm ',' rreg
   45     | LLOGW rreg ',' sreg ',' rreg
   46     | LLOGW rreg ',' rreg
   47     | LSHW rreg ',' sreg ',' rreg
   48     | LSHW rreg ',' rreg
   49     | LSHW imm ',' sreg ',' rreg
   50     | LSHW imm ',' rreg
   51     | LABS rreg ',' rreg
   52     | LABS rreg
   53     | LMA rreg ',' sreg ',' rreg
   54     | LMOVW imm ',' rreg
   55     | LMOVW ximm ',' rreg
   56     | LCROP cbit ',' cbit
   57     | LCROP cbit ',' con ',' cbit
   58     | LMOVW creg ',' creg
   59     | LMOVW psr ',' creg
   60     | LMOVW lcr ',' rreg
   61     | LMOVW psr ',' rreg
   62     | LMOVW seg ',' rreg
   63     | LMOVW rreg ',' seg
   64     | LMOVW xlreg ',' rreg
   65     | LMOVW rreg ',' xlreg
   66     | LMOVW creg ',' psr
   67     | LMOVW rreg ',' psr
   68     | LBRA rel
   69     | LBRA addr
   70     | LBRA '(' xlreg ')'
   71     | LBRA ',' rel
   72     | LBRA ',' addr
   73     | LBRA ',' '(' xlreg ')'
   74     | LBRA creg ',' rel
   75     | LBRA creg ',' addr
   76     | LBRA creg ',' '(' xlreg ')'
   77     | LBRA con ',' rel
   78     | LBRA con ',' addr
   79     | LBRA con ',' '(' xlreg ')'
   80     | LBRA con ',' con ',' rel
   81     | LBRA con ',' con ',' addr
   82     | LBRA con ',' con ',' '(' xlreg ')'
   83     | LTRAP rreg ',' sreg
   84     | LTRAP imm ',' sreg
   85     | LTRAP rreg comma
   86     | LTRAP comma
   87     | LFCONV freg ',' freg
   88     | LFADD freg ',' freg
   89     | LFADD freg ',' freg ',' freg
   90     | LFMA freg ',' freg ',' freg ',' freg
   91     | LFCMP freg ',' freg
   92     | LFCMP freg ',' freg ',' creg
   93     | LCMP rreg ',' rreg
   94     | LCMP rreg ',' imm
   95     | LCMP rreg ',' rreg ',' creg
   96     | LCMP rreg ',' imm ',' creg
   97     | LRLWM imm ',' rreg ',' imm ',' rreg
   98     | LRLWM imm ',' rreg ',' mask ',' rreg
   99     | LRLWM rreg ',' rreg ',' imm ',' rreg
  100     | LRLWM rreg ',' rreg ',' mask ',' rreg
  101     | LMOVMW addr ',' rreg
  102     | LMOVMW rreg ',' addr
  103     | LXLD regaddr ',' rreg
  104     | LXLD regaddr ',' imm ',' rreg
  105     | LXST rreg ',' regaddr
  106     | LXST rreg ',' imm ',' regaddr
  107     | LXMV regaddr ',' rreg
  108     | LXMV rreg ',' regaddr
  109     | LXOP regaddr
  110     | LNOP comma
  111     | LNOP rreg comma
  112     | LNOP freg comma
  113     | LNOP ',' rreg
  114     | LNOP ',' freg
  115     | LWORD imm comma
  116     | LWORD ximm comma
  117     | LEND comma
  118     | LTEXT name ',' imm
  119     | LTEXT name ',' con ',' imm
  120     | LTEXT name ',' imm ':' imm
  121     | LTEXT name ',' con ',' imm ':' imm
  122     | LDATA name '/' con ',' imm
  123     | LDATA name '/' con ',' ximm
  124     | LDATA name '/' con ',' fimm
  125     | LRETRN comma

  126 rel: con '(' LPC ')'
  127    | LNAME offset
  128    | LLAB offset

  129 rreg: sreg

  130 xlreg: lr
  131      | ctr

  132 lr: LLR

  133 lcr: LCR

  134 ctr: LCTR

  135 msr: LMSR

  136 psr: LSPREG
  137    | LSPR '(' con ')'
  138    | msr

  139 seg: LSEG '(' con ')'
  140    | LSEG '(' sreg ')'

  141 fpscr: LFPSCR

  142 fpscrf: LFPSCR '(' con ')'

  143 freg: LFREG
  144     | LF '(' con ')'

  145 creg: LCREG
  146     | LCR '(' con ')'

  147 cbit: con

  148 mask: con ',' con

  149 ximm: '$' addr
  150     | '$' LSCONST

  151 fimm: '$' LFCONST
  152     | '$' '-' LFCONST

  153 imm: '$' con

  154 sreg: LREG
  155     | LR '(' con ')'

  156 regaddr: '(' sreg ')'
  157        | '(' sreg '+' sreg ')'

  158 addr: name
  159     | con '(' sreg ')'

  160 name: con '(' pointer ')'
  161     | LNAME offset '(' pointer ')'
  162     | LNAME '<' '>' offset '(' LSB ')'

  163 comma: /* empty */
  164      | ','

  165 offset: /* empty */
  166       | '+' con
  167       | '-' con

  168 pointer: LSB
  169        | LSP
  170        | LFP

  171 con: LCONST
  172    | LVAR
  173    | '-' con
  174    | '+' con
  175    | '~' con
  176    | '(' expr ')'

  177 expr: con
  178     | expr '+' expr
  179     | expr '-' expr
  180     | expr '*' expr
  181     | expr '/' expr
  182     | expr '%' expr
  183     | expr '<' '<' expr
  184     | expr '>' '>' expr
  185     | expr '&' expr
  186     | expr '^' expr
  187     | expr '|' expr


Terminals, with rules where they appear

$end (0) 0
'$' (36) 149 150 151 152 153
'%' (37) 182
'&' (38) 185
'(' (40) 70 73 76 79 82 126 137 139 140 142 144 146 155 156 157 159
    160 161 162 176
')' (41) 70 73 76 79 82 126 137 139 140 142 144 146 155 156 157 159
    160 161 162 176
'*' (42) 180
'+' (43) 157 166 174 178
',' (44) 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 53 54
    55 56 57 58 59 60 61 62 63 64 65 66 67 71 72 73 74 75 76 77 78
    79 80 81 82 83 84 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
    102 103 104 105 106 107 108 113 114 118 119 120 121 122 123 124
    148 164
'-' (45) 152 167 173 179
'/' (47) 122 123 124 181
':' (58) 4 6 120 121
';' (59) 7 8 9 10 11 12
'<' (60) 162 183
'=' (61) 7 8
'>' (62) 162 184
'^' (94) 186
'|' (124) 187
'~' (126) 175
error (256) 12
LMOVW (258) 13 14 15 25 26 29 30 31 32 33 34 35 37 38 39 54 55 58 59
    60 61 62 63 64 65 66 67
LMOVB (259) 16 17 18 27 28
LABS (260) 51 52
LLOGW (261) 45 46
LSHW (262) 47 48 49 50
LADDW (263) 40 41 42 43 44
LCMP (264) 93 94 95 96
LCROP (265) 56 57
LBRA (266) 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
LFMOV (267) 19 20 21 22 23 24
LFCONV (268) 87
LFCMP (269) 91 92
LFADD (270) 88 89
LFMA (271) 90
LTRAP (272) 83 84 85 86
LXORW (273)
LNOP (274) 110 111 112 113 114
LEND (275) 117
LRETT (276)
LWORD (277) 115 116
LTEXT (278) 118 119 120 121
LDATA (279) 122 123 124
LRETRN (280) 125
LCONST (281) 171
LSP (282) 169
LSB (283) 162 168
LFP (284) 170
LPC (285) 126
LCREG (286) 145
LFLUSH (287)
LREG (288) 154
LFREG (289) 143
LR (290) 155
LCR (291) 133 146
LF (292) 144
LFPSCR (293) 141 142
LLR (294) 132
LCTR (295) 134
LSPR (296) 137
LSPREG (297) 136
LSEG (298) 139 140
LMSR (299) 135
LSCHED (300) 9
LXLD (301) 103 104
LXST (302) 105 106
LXOP (303) 109
LXMV (304) 107 108
LRLWM (305) 97 98 99 100
LMOVMW (306) 101 102
LMOVEM (307)
LMOVFL (308)
LMTFSB (309) 36
LMA (310) 53
LFCONST (311) 151 152
LSCONST (312) 150
LNAME (313) 6 7 127 161 162
LLAB (314) 4 128
LVAR (315) 8 172


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
prog (80)
    on left: 1 2, on right: 0 2
line (81)
    on left: 4 6 7 8 9 10 11 12, on right: 2 4 6
$@1 (82)
    on left: 3, on right: 4
$@2 (83)
    on left: 5, on right: 6
inst (84)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
    31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
    94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
    112 113 114 115 116 117 118 119 120 121 122 123 124 125, on right:
    11
rel (85)
    on left: 126 127 128, on right: 68 71 74 77 80
rreg (86)
    on left: 129, on right: 13 14 15 16 17 18 25 26 27 28 37 38 39
    40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 60 61 62 63 64
    65 67 83 85 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
    108 111 113
xlreg (87)
    on left: 130 131, on right: 64 65 70 73 76 79 82
lr (88)
    on left: 132, on right: 130
lcr (89)
    on left: 133, on right: 37 39 60
ctr (90)
    on left: 134, on right: 131
msr (91)
    on left: 135, on right: 138
psr (92)
    on left: 136 137 138, on right: 59 61 66 67
seg (93)
    on left: 139 140, on right: 62 63
fpscr (94)
    on left: 141, on right: 31 32 33 34
fpscrf (95)
    on left: 142, on right: 35
freg (96)
    on left: 143 144, on right: 19 20 21 22 23 24 29 30 31 32 33 87
    88 89 90 91 92 112 114
creg (97)
    on left: 145 146, on right: 34 38 58 59 66 74 75 76 92 95 96
cbit (98)
    on left: 147, on right: 56 57
mask (99)
    on left: 148, on right: 98 100
ximm (100)
    on left: 149 150, on right: 55 116 123
fimm (101)
    on left: 151 152, on right: 21 124
imm (102)
    on left: 153, on right: 33 35 36 37 41 42 44 49 50 54 84 94 96
    97 98 99 104 106 115 118 119 120 121 122
sreg (103)
    on left: 154 155, on right: 40 41 45 47 49 53 83 84 129 140 156
    157 159
regaddr (104)
    on left: 156 157, on right: 15 18 20 24 26 28 30 103 104 105 106
    107 108 109
addr (105)
    on left: 158 159, on right: 14 17 19 23 25 27 29 69 72 75 78 81
    101 102 149
name (106)
    on left: 160 161 162, on right: 118 119 120 121 122 123 124 158
comma (107)
    on left: 163 164, on right: 85 86 110 111 112 115 116 117 125
offset (108)
    on left: 165 166 167, on right: 127 128 161 162
pointer (109)
    on left: 168 169 170, on right: 160 161
con (110)
    on left: 171 172 173 174 175 176, on right: 36 57 77 78 79 80 81
    82 119 121 122 123 124 126 137 139 142 144 146 147 148 153 155
    159 160 166 167 173 174 175 177
expr (111)
    on left: 177 178 179 180 181 182 183 184 185 186 187, on right:
    7 8 176 178 179 180 181 182 183 184 185 186 187


state 0

    0 $accept: . prog $end

    $default  reduce using rule 1 (prog)

    prog  go to state 1


state 1

    0 $accept: prog . $end
    2 prog: prog . line

    $end    shift, and go to state 2
    error   shift, and go to state 3
    LMOVW   shift, and go to state 4
    LMOVB   shift, and go to state 5
    LABS    shift, and go to state 6
    LLOGW   shift, and go to state 7
    LSHW    shift, and go to state 8
    LADDW   shift, and go to state 9
    LCMP    shift, and go to state 10
    LCROP   shift, and go to state 11
    LBRA    shift, and go to state 12
    LFMOV   shift, and go to state 13
    LFCONV  shift, and go to state 14
    LFCMP   shift, and go to state 15
    LFADD   shift, and go to state 16
    LFMA    shift, and go to state 17
    LTRAP   shift, and go to state 18
    LNOP    shift, and go to state 19
    LEND    shift, and go to state 20
    LWORD   shift, and go to state 21
    LTEXT   shift, and go to state 22
    LDATA   shift, and go to state 23
    LRETRN  shift, and go to state 24
    LSCHED  shift, and go to state 25
    LXLD    shift, and go to state 26
    LXST    shift, and go to state 27
    LXOP    shift, and go to state 28
    LXMV    shift, and go to state 29
    LRLWM   shift, and go to state 30
    LMOVMW  shift, and go to state 31
    LMTFSB  shift, and go to state 32
    LMA     shift, and go to state 33
    LNAME   shift, and go to state 34
    LLAB    shift, and go to state 35
    LVAR    shift, and go to state 36
    ';'     shift, and go to state 37

    line  go to state 38
    inst  go to state 39


state 2

    0 $accept: prog $end .

    $default  accept


state 3

   12 line: error . ';'

    ';'  shift, and go to state 40


state 4

   13 inst: LMOVW . rreg ',' rreg
   14     | LMOVW . addr ',' rreg
   15     | LMOVW . regaddr ',' rreg
   25     | LMOVW . rreg ',' addr
   26     | LMOVW . rreg ',' regaddr
   29     | LMOVW . freg ',' addr
   30     | LMOVW . freg ',' regaddr
   31     | LMOVW . fpscr ',' freg
   32     | LMOVW . freg ',' fpscr
   33     | LMOVW . freg ',' imm ',' fpscr
   34     | LMOVW . fpscr ',' creg
   35     | LMOVW . imm ',' fpscrf
   37     | LMOVW . rreg ',' imm ',' lcr
   38     | LMOVW . rreg ',' creg
   39     | LMOVW . rreg ',' lcr
   54     | LMOVW . imm ',' rreg
   55     | LMOVW . ximm ',' rreg
   58     | LMOVW . creg ',' creg
   59     | LMOVW . psr ',' creg
   60     | LMOVW . lcr ',' rreg
   61     | LMOVW . psr ',' rreg
   62     | LMOVW . seg ',' rreg
   63     | LMOVW . rreg ',' seg
   64     | LMOVW . xlreg ',' rreg
   65     | LMOVW . rreg ',' xlreg
   66     | LMOVW . creg ',' psr
   67     | LMOVW . rreg ',' psr

    '+'     shift, and go to state 41
    '-'     shift, and go to state 42
    LCONST  shift, and go to state 43
    LCREG   shift, and go to state 44
    LREG    shift, and go to state 45
    LFREG   shift, and go to state 46
    LR      shift, and go to state 47
    LCR     shift, and go to state 48
    LF      shift, and go to state 49
    LFPSCR  shift, and go to state 50
    LLR     shift, and go to state 51
    LCTR    shift, and go to state 52
    LSPR    shift, and go to state 53
    LSPREG  shift, and go to state 54
    LSEG    shift, and go to state 55
    LMSR    shift, and go to state 56
    LNAME   shift, and go to state 57
    LVAR    shift, and go to state 58
    '('     shift, and go to state 59
    '$'     shift, and go to state 60
    '~'     shift, and go to state 61

    rreg     go to state 62
    xlreg    go to state 63
    lr       go to state 64
    lcr      go to state 65
    ctr      go to state 66
    msr      go to state 67
    psr      go to state 68
    seg      go to state 69
    fpscr    go to state 70
    freg     go to state 71
    creg     go to state 72
    ximm     go to state 73
    imm      go to state 74
    sreg     go to state 75
    regaddr  go to state 76
    addr     go to state 77
    name     go to state 78
    con      go to state 79


state 5

   16 inst: LMOVB . rreg ',' rreg
   17     | LMOVB . addr ',' rreg
   18     | LMOVB . regaddr ',' rreg
   27     | LMOVB . rreg ',' addr
   28     | LMOVB . rreg ',' regaddr

    '+'     shift, and go to state 41
    '-'     shift, and go to state 42
    LCONST  shift, and go to state 43
    LREG    shift, and go to state 45
    LR      shift, and go to state 47
    LNAME   shift, and go to state 57
    LVAR    shift, and go to state 58
    '('     shift, and go to state 59
    '~'     shift, and go to state 61

    rreg     go to state 80
    sreg     go to state 75
    regaddr  go to state 81
    addr     go to state 82
    name     go to state 78
    con      go to state 79


state 6

   51 inst: LABS . rreg ',' rreg
   52     | LABS . rreg

    LREG  shift, and go to state 45
    LR    shift, and go to state 47

    rreg  go to state 83
    sreg  go to state 75


state 7

   45 inst: LLOGW . rreg ',' sreg ',' rreg
   46     | LLOGW . rreg ',' rreg

    LREG  shift, and go to state 45
    LR    shift, and go to state 47

    rreg  go to state 84
    sreg  go to state 75


state 8

   47 inst: LSHW . rreg ',' sreg ',' rreg
   48     | LSHW . rreg ',' rreg
   49     | LSHW . imm ',' sreg ',' rreg
   50     | LSHW . imm ',' rreg

    LREG  shift, and go to state 45
    LR    shift, and go to state 47
    '$'   shift, and go to state 85

    rreg  go to state 86
    imm   go to state 87
    sreg  go to state 75


state 9

   40 inst: LADDW . rreg ',' sreg ',' rreg
   41     | LADDW . imm ',' sreg ',' rreg
   42     | LADDW . rreg ',' imm ',' rreg
   43     | LADDW . rreg ',' rreg
   44     | LADDW . imm ',' rreg

    LREG  shift, and go to state 45
    LR    shift, and go to state 47
    '$'   shift, and go to state 85

    rreg  go to state 88
    imm   go to state 89
    sreg  go to state 75


state 10

   93 inst: LCMP . rreg ',' rreg
   94     | LCMP . rreg ',' imm
   95     | LCMP . rreg ',' rreg ',' creg
   96     | LCMP . rreg ',' imm ',' creg

    LREG  shift, and go to state 45
    LR    shift, and go to state 47

    rreg  go to state 90
    sreg  go to state 75


state 11

   56 inst: LCROP . cbit ',' cbit
   57     | LCROP . cbit ',' con ',' cbit

    '+'     shift, and go to state 41
    '-'     shift, and go to state 42
    LCONST  shift, and go to state 43
    LVAR    shift, and go to state 58
    '('     shift, and go to state 91
    '~'     shift, and go to state 61

    cbit  go to state 92
    con   go to state 93


state 12

   68 inst: LBRA . rel
   69     | LBRA . addr
   70     | LBRA . '(' xlreg ')'
   71     | LBRA . ',' rel
   72     | LBRA . ',' addr
   73     | LBRA . ',' '(' xlreg ')'
   74     | LBRA . creg ',' rel
   75     | LBRA . creg ',' addr
   76     | LBRA . creg ',' '(' xlreg ')'
   77     | LBRA . con ',' rel
   78     | LBRA . con ',' addr
   79     | LBRA . con ',' '(' xlreg ')'
   80     | LBRA . con ',' con ',' rel
   81     | LBRA . con ',' con ',' addr
   82     | LBRA . con ',' con ',' '(' xlreg ')'

    '+'     shift, and go to state 41
    '-'     shift, and go to state 42
    LCONST  shift, and go to state 43
    LCREG   shift, and go to state 44
    LCR     shift, and go to state 94
    LNAME   shift, and go to state 95
    LLAB    shift, and go to state 96
    LVAR    shift, and go to state 58
    ','     shift, and go to state 97
    '('     shift, and go to state 98
    '~'     shift, and go to state 61

    rel   go to state 99
    creg  go to state 100
    addr  go to state 101
    name  go to state 78
    con   go to state 102


state 13

   19 inst: LFMOV . addr ',' freg
   20     | LFMOV . regaddr ',' freg
   21     | LFMOV . fimm ',' freg
   22     | LFMOV . freg ',' freg
   23     | LFMOV . freg ',' addr
   24     | LFMOV . freg ',' regaddr

    '+'     shift, and go to state 41
    '-'     shift, and go to state 42
    LCONST  shift, and go to state 43
    LFREG   shift, and go to state 46
    LF      shift, and go to state 49
    LNAME   shift, and go to state 57
    LVAR    shift, and go to state 58
    '('     shift, and go to state 59
    '$'     shift, and go to state 103
    '~'     shift, and go to state 61

    freg     go to state 104
    fimm     go to state 105
    regaddr  go to state 106
    addr     go to state 107
    name     go to state 78
    con      go to state 79


state 14

   87 inst: LFCONV . freg ',' freg

    LFREG  shift, and go to state 46
    LF     shift, and go to state 49

    freg  go to state 108


state 15

   91 inst: LFCMP . freg ',' freg
   92     | LFCMP . freg ',' freg ',' creg

    LFREG  shift, and go to state 46
    LF     shift, and go to state 49

    freg  go to state 109


state 16

   88 inst: LFADD . freg ',' freg
   89     | LFADD . freg ',' freg ',' freg

    LFREG  shift, and go to state 46
    LF     shift, and go to state 49

    freg  go to state 110


state 17

   90 inst: LFMA . freg ',' freg ',' freg ',' freg

    LFREG  shift, and go to state 46
    LF     shift, and go to state 49

    freg  go to state 111


state 18

   83 inst: LTRAP . rreg ',' sreg
   84     | LTRAP . imm ',' sreg
   85     | LTRAP . rreg comma
   86     | LTRAP . comma

    LREG  shift, and go to state 45
    LR    shift, and go to state 47
    ','   shift, and go to state 112
    '$'   shift, and go to state 85

    $default  reduce using rule 163 (comma)

    rreg   go to state 113
    imm    go to state 114
    sreg   go to state 75
    comma  go to state 115


state 19

  110 inst: LNOP . comma
  111     | LNOP . rreg comma
  112     | LNOP . freg comma
  113     | LNOP . ',' rreg
  114     | LNOP . ',' freg

    LREG   shift, and go to state 45
    LFREG  shift, and go to state 46
    LR     shift, and go to state 47
    LF     shift, and go to state 49
    ','    shift, and go to state 116

    $default  reduce using rule 163 (comma)

    rreg   go to state 117
    freg   go to state 118
    sreg   go to state 75
    comma  go to state 119


state 20

  117 inst: LEND . comma

    ','  shift, and go to state 112

    $default  reduce using rule 163 (comma)

    comma  go to state 120


state 21

  115 inst: LWORD . imm comma
  116     | LWORD . ximm comma

    '$'  shift, and go to state 60

    ximm  go to state 121
    imm   go to state 122


state 22

  118 inst: LTEXT . name ',' imm
  119     | LTEXT . name ',' con ',' imm
  120     | LTEXT . name ',' imm ':' imm
  121     | LTEXT . name ',' con ',' imm ':' imm

    '+'     shift, and go to state 41
    '-'     shift, and go to state 42
    LCONST  shift, and go to state 43
    LNAME   shift, and go to state 57
    LVAR    shift, and go to state 58
    '('     shift, and go to state 91
    '~'     shift, and go to state 61

    name  go to state 123
    con   go to state 124


state 23

  122 inst: LDATA . name '/' con ',' imm
  123     | LDATA . name '/' con ',' ximm
  124     | LDATA . name '/' con ',' fimm

    '+'     shift, and go to state 41
    '-'     shift, and go to state 42
    LCONST  shift, and go to state 43
    LNAME   shift, and go to state 57
    LVAR    shift, and go to state 58
    '('     shift, and go to state 91
    '~'     shift, and go to state 61

    name  go to state 125
    con   go to state 124


state 24

  125 inst: LRETRN . comma

    ','  shift, and go to state 112

    $default  reduce using rule 163 (comma)

    comma  go to state 126


state 25

    9 line: LSCHED . ';'

    ';'  shift, and go to state 127


state 26

  103 inst: LXLD . regaddr ',' rreg
  104     | LXLD . regaddr ',' imm ',' rreg

    '('  shift, and go to state 128

    regaddr  go to state 129


state 27

  105 inst: LXST . rreg ',' regaddr
  106     | LXST . rreg ',' imm ',' regaddr

    LREG  shift, and go to state 45
    LR    shift, and go to state 47

    rreg  go to state 130
    sreg  go to state 75


state 28

  109 inst: LXOP . regaddr

    '('  shift, and go to state 128

    regaddr  go to state 131


state 29

  107 inst: LXMV . regaddr ',' rreg
  108     | LXMV . rreg ',' regaddr

    LREG  shift, and go to state 45
    LR    shift, and go to state 47
    '('   shift, and go to state 128

    rreg     go to state 132
    sreg     go to state 75
    regaddr  go to state 133


state 30

   97 inst: LRLWM . imm ',' rreg ',' imm ',' rreg
   98     | LRLWM . imm ',' rreg ',' mask ',' rreg
   99     | LRLWM . rreg ',' rreg ',' imm ',' rreg
  100     | LRLWM . rreg ',' rreg ',' mask ',' rreg

    LREG  shift, and go to state 45
    LR    shift, and go to state 47
    '$'   shift, and go to state 85

    rreg  go to state 134
    imm   go to state 135
    sreg  go to state 75


state 31

  101 inst: LMOVMW . addr ',' rreg
  102     | LMOVMW . rreg ',' addr

    '+'     shift, and go to state 41
    '-'     shift, and go to state 42
    LCONST  shift, and go to state 43
    LREG    shift, and go to state 45
    LR      shift, and go to state 47
    LNAME   shift, and go to state 57
    LVAR    shift, and go to state 58
    '('     shift, and go to state 91
    '~'     shift, and go to state 61

    rreg  go to state 136
    sreg  go to state 75
    addr  go to state 137
    name  go to state 78
    con   go to state 79


state 32

   36 inst: LMTFSB . imm ',' con

    '$'  shift, and go to state 85

    imm  go to state 138


state 33

   53 inst: LMA . rreg ',' sreg ',' rreg

    LREG  shift, and go to state 45
    LR    shift, and go to state 47

    rreg  go to state 139
    sreg  go to state 75


state 34

    6 line: LNAME . ':' $@2 line
    7     | LNAME . '=' expr ';'

    ':'  shift, and go to state 140
    '='  shift, and go to state 141


state 35

    4 line: LLAB . ':' $@1 line

    ':'  shift, and go to state 142


state 36

    8 line: LVAR . '=' expr ';'

    '='  shift, and go to state 143


state 37

   10 line: ';' .

    $default  reduce using rule 10 (line)


state 38

    2 prog: prog line .

    $default  reduce using rule 2 (prog)


state 39

   11 line: inst . ';'

    ';'  shift, and go to state 144


state 40

   12 line: error ';' .

    $default  reduce using rule 12 (line)


state 41

  174 con: '+' . con

    '+'     shift, and go to state 41
    '-'     shift, and go to state 42
    LCONST  shift, and go to state 43
    LVAR    shift, and go to state 58
    '('     shift, and go to state 91
    '~'     shift, and go to state 61

    con  go to state 145


state 42

  173 con: '-' . con

    '+'     shift, and go to state 41
    '-'     shift, and go to state 42
    LCONST  shift, and go to state 43
    LVAR    shift, and go to state 58
    '('     shift, and go to state 91
    '~'     shift, and go to state 61

    con  go to state 146


state 43

  171 con: LCONST .

    $default  reduce using rule 171 (con)


state 44

  145 creg: LCREG .

    $default  reduce using rule 145 (creg)


state 45

  154 sreg: LREG .

    $default  reduce using rule 154 (sreg)


state 46

  143 freg: LFREG .

    $default  reduce using rule 143 (freg)


state 47

  155 sreg: LR . '(' con ')'

    '('  shift, and go to state 147


state 48

  133 lcr: LCR .
  146 creg: LCR . '(' con ')'

    '('  shift, and go to state 148

    $default  reduce using rule 133 (lcr)


state 49

  144 freg: LF . '(' con ')'

    '('  shift, and go to state 149


state 50

  141 fpscr: LFPSCR .

    $default  reduce using rule 141 (fpscr)


state 51

  132 lr: LLR .

    $default  reduce using rule 132 (lr)


state 52

  134 ctr: LCTR .

    $default  reduce using rule 134 (ctr)


state 53

  137 psr: LSPR . '(' con ')'

    '('  shift, and go to state 150


state 54

  136 psr: LSPREG .

    $default  reduce using rule 136 (psr)


state 55

  139 seg: LSEG . '(' con ')'
  140    | LSEG . '(' sreg ')'

    '('  shift, and go to state 151


state 56

  135 msr: LMSR .

    $default  reduce using rule 135 (msr)


state 57

  161 name: LNAME . offset '(' pointer ')'
  162     | LNAME . '<' '>' offset '(' LSB ')'

    '<'  shift, and go to state 152
    '+'  shift, and go to state 153
    '-'  shift, and go to state 154

    $default  reduce using rule 165 (offset)

    offset  go to state 155


state 58

  172 con: LVAR .

    $default  reduce using rule 172 (con)


state 59

  156 regaddr: '(' . sreg ')'
  157        | '(' . sreg '+' sreg ')'
  176 con: '(' . expr ')'

    '+'     shift, and go to state 41
    '-'     shift, and go to state 42
    LCONST  shift, and go to state 43
    LREG    shift, and go to state 45
    LR      shift, and go to state 47
    LVAR    shift, and go to state 58
    '('     shift, and go to state 91
    '~'     shift, and go to state 61

    sreg  go to state 156
    con   go to state 157
    expr  go to state 158


state 60

  149 ximm: '$' . addr
  150     | '$' . LSCONST
  153 imm: '$' . con

    '+'      shift, and go to state 41
    '-'      shift, and go to state 42
    LCONST   shift, and go to state 43
    LSCONST  shift, and go to state 159
    LNAME    shift, and go to state 57
    LVAR     shift, and go to state 58
    '('      shift, and go to state 91
    '~'      shift, and go to state 61

    addr  go to state 160
    name  go to state 78
    con   go to state 161


state 61

  175 con: '~' . con

    '+'     shift, and go to state 41
    '-'     shift, and go to state 42
    LCONST  shift, and go to state 43
    LVAR    shift, and go to state 58
    '('     shift, and go to state 91
    '~'     shift, and go to state 61

    con  go to state 162


state 62

   13 inst: LMOVW rreg . ',' rreg
   25     | LMOVW rreg . ',' addr
   26     | LMOVW rreg . ',' regaddr
   37     | LMOVW rreg . ',' imm ',' lcr
   38     | LMOVW rreg . ',' creg
   39     | LMOVW rreg . ',' lcr
   63     | LMOVW rreg . ',' seg
   65     | LMOVW rreg . ',' xlreg
   67     | LMOVW rreg . ',' psr

    ','  shift, and go to state 163


state 63

   64 inst: LMOVW xlreg . ',' rreg

    ','  shift, and go to state 164


state 64

  130 xlreg: lr .

    $default  reduce using rule 130 (xlreg)


state 65

   60 inst: LMOVW lcr . ',' rreg

    ','  shift, and go to state 165


state 66

  131 xlreg: ctr .

    $default  reduce using rule 131 (xlreg)


state 67

  138 psr: msr .

    $default  reduce using rule 138 (psr)


state 68

   59 inst: LMOVW psr . ',' creg
   61     | LMOVW psr . ',' rreg

    ','  shift, and go to state 166


state 69

   62 inst: LMOVW seg . ',' rreg

    ','  shift, and go to state 167


state 70

   31 inst: LMOVW fpscr . ',' freg
   34     | LMOVW fpscr . ',' creg

    ','  shift, and go to state 168


state 71

   29 inst: LMOVW freg . ',' addr
   30     | LMOVW freg . ',' regaddr
   32     | LMOVW freg . ',' fpscr
   33     | LMOVW freg . ',' imm ',' fpscr

    ','  shift, and go to state 169


state 72

   58 inst: LMOVW creg . ',' creg
   66     | LMOVW creg . ',' psr

    ','  shift, and go to state 170


state 73

   55 inst: LMOVW ximm . ',' rreg

    ','  shift, and go to state 171


state 74

   35 inst: LMOVW imm . ',' fpscrf
   54     | LMOVW imm . ',' rreg

    ','  shift, and go to state 172


state 75

  129 rreg: sreg .

    $default  reduce using rule 129 (rreg)


state 76

   15 inst: LMOVW regaddr . ',' rreg

    ','  shift, and go to state 173


state 77

   14 inst: LMOVW addr . ',' rreg

    ','  shift, and go to state 174


state 78

  158 addr: name .

    $default  reduce using rule 158 (addr)


state 79

  159 addr: con . '(' sreg ')'
  160 name: con . '(' pointer ')'

    '('  shift, and go to state 175


state 80

   16 inst: LMOVB rreg . ',' rreg
   27     | LMOVB rreg . ',' addr
   28     | LMOVB rreg . ',' regaddr
